--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -130,9 +130,9 @@
                     conn.push(c);
                     console.log("TEST: " + conn);
                     cPlayerID = c.peer
-                    // players[cPlayerID] = {
-                    //     playerName: "unknown"
-                    // };
+                    players[cPlayerID] = {
+                        playerName: "unknown"
+                    };
                     c.send(["playersData", players]);
                     console.log("HERE")
                     currentConn = c
