--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -174,6 +174,7 @@
                     switch (data[0]) {
                         case 'setPlayerData':
                             setPlayerData(data[1]["playerID"], data[1]["playerName"], data[1]["inPlay"]);
+                            console.log("ACTIVATED");
                             updatePlayerList();
                         case 'setPlayerName':
                             changePlayerName(data[1]["playerID"], data[1]["playerName"]);
