--- a/Mimic/send.html
+++ b/Mimic/send.html
@@ -243,6 +243,7 @@
                         case 'playersData':
                             players = data[1];
                             updatePlayerList();
+                            break;
                         default:
                             console.log(data)
                             addMessage("<span class=\"peerMsg\">" + data[1]["playerName"] + ": </span>" +
