--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -312,7 +312,7 @@
             var event = e || window.event;
             var char = event.which || event.keyCode;
             if (char == '13')
-                changeOwnName(changeNameInput, peer.id, changeOwnInput.value);
+                changeOwnName(changeNameInput, peer.id, changeNameInput.value);
         });
 
         function showChangeName(e) {
