--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -49,7 +49,7 @@
                         </div>
                     </div>
 
-                    <div id="changeName-container" class="changeName-container no-display">
+                    <div id="changeName-container" class="changeName-container">
                         <input type="text" id="changeName-input" placeholder="Enter a name...">
                         <i onclick="changeOwnName(this, peer.id, document.getElementById('changeName-input').value)"
                             class="fa-regular fa-floppy-disk confirm-ChangeName-button"></i>
