--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -16,9 +16,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
     </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/6594176c2b.js" crossorigin="anonymous"></script>
     <title>Mimic Revanced - Host</title>
-    <link rel="stylesheet" href="./style.css?v=0.66">
+    <link rel="stylesheet" href="./style.css?v=0.67">
 </head>
 
 <body>
@@ -33,32 +34,34 @@
     </header>
 
     <div class="Main">
-        <div class="Main-top-container">
-            <h2 class="game-title">Mimic Revanced</h2>
-        </div>
-        <div class="Main-mid-container">
-            <h3>Players:</h3>
-            <br>
-            <div id="player-list">
-                <div class="player-container">
-                    <div id="showName-container" class="showName-container">
-                        <p class="player-name-text">Host</p>
-                        <div onclick="showChangeName(this)" id="changeName-button-container"
-                            class="changeName-button-container">
-                            <i class="fa-solid fa-pen changeName-button"></i>
+        <div id="starting-slide">
+            <div class="Main-top-container">
+                <h2 class="game-title">Mimic Revanced</h2>
+            </div>
+            <div class="Main-mid-container">
+                <h3>Players:</h3>
+                <br>
+                <div id="player-list">
+                    <div class="player-container">
+                        <div id="showName-container" class="showName-container">
+                            <p class="player-name-text">Host</p>
+                            <div onclick="showChangeName(this)" id="changeName-button-container"
+                                class="changeName-button-container">
+                                <i class="fa-solid fa-pen changeName-button"></i>
+                            </div>
                         </div>
-                    </div>
-
-                    <div id="changeName-container" class="changeName-container no-display">
-                        <input type="text" id="changeName-input" placeholder="Enter a name...">
-                        <i onclick="changeOwnName(this, peer.id, document.getElementById('changeName-input').value)"
-                            class="fa-regular fa-floppy-disk confirm-ChangeName-button"></i>
+    
+                        <div id="changeName-container" class="changeName-container no-display">
+                            <input type="text" id="changeName-input" placeholder="Enter a name...">
+                            <i onclick="changeOwnName(this, peer.id, document.getElementById('changeName-input').value)"
+                                class="fa-regular fa-floppy-disk confirm-ChangeName-button"></i>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="Main-bottom-container">
-            <button onclick="activateGame(Object.keys(players).length)">Start Game</button>
+            <div class="Main-bottom-container">
+                <button onclick="activateGame()">Start Game</button>
+            </div>
         </div>
     </div>
 
@@ -333,6 +336,10 @@
                 console.log("Sent: playersData " + step)
             }
             playerListElement.innerHTML = playersConnectedList;
+        }
+
+        function triggerCurrentRound() {
+            $('#starting-slide').fadeOut(500);
         }
     </script>
 
