--- a/Mimic/send.html
+++ b/Mimic/send.html
@@ -15,9 +15,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
     </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/6594176c2b.js" crossorigin="anonymous"></script>
     <title>Mimic revanced</title>
-    <link rel="stylesheet" href="./style.css?v=0.36">
+    <link rel="stylesheet" href="./style.css?v=0.37">
 </head>
 
 <body>
