--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -338,12 +338,13 @@
             playerListElement.innerHTML = playersConnectedList;
         }
 
+        // Game Started Functions
         function triggerCurrentRound() {
             $('#starting-slide').fadeOut(500);
         }
     </script>
 
-    <script src="./mimicGameLogic.js?v=0.32">
+    <script src="./mimicGameLogic.js?v=0.33">
     </script>
 </body>
 
