--- a/Mimic/send.html
+++ b/Mimic/send.html
@@ -18,7 +18,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/6594176c2b.js" crossorigin="anonymous"></script>
     <title>Mimic revanced</title>
-    <link rel="stylesheet" href="./style.css?v=0.37">
+    <link rel="stylesheet" href="./style.css?v=0.38">
 </head>
 
 <body>
@@ -406,7 +406,9 @@
         // Game Started Functions
         function triggerCurrentRound() {
             $('player-secret-word').text(playersInGame[peer.id]["word"]);
+
             $('#starting-slide').fadeOut(500);
+            $('#your-word-slide').fadeIn(500);
         }
     </script>
 </body>
