--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -19,7 +19,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/6594176c2b.js" crossorigin="anonymous"></script>
     <title>Mimic Revanced - Host</title>
-    <link rel="stylesheet" href="./style.css?v=0.69">
+    <link rel="stylesheet" href="./style.css?v=0.69.1">
 </head>
 
 <body>
@@ -63,7 +63,7 @@
                 <button onclick="activateGame()">Start Game</button>
             </div>
         </div>
-        <div id="your-word-slide" class="no-display">
+        <div id="your-word-slide">
             <div class="word-top-container">
                 <p>Your secret word is:</p>
                 <h2 id="player-secret-word">Tree</h2>
