--- a/Mimic/send.html
+++ b/Mimic/send.html
@@ -18,7 +18,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/6594176c2b.js" crossorigin="anonymous"></script>
     <title>Mimic revanced</title>
-    <link rel="stylesheet" href="./style.css?v=0.39.1">
+    <link rel="stylesheet" href="./style.css?v=0.4">
 </head>
 
 <body>
@@ -62,7 +62,7 @@
                 <p>Waiting for the host to start the game...</p>
             </div>
         </div>
-        <div id="your-word-slide" class="no-display">
+        <div id="your-word-slide">
             <div class="word-top-container">
                 <p>Your secret word is:</p>
                 <h2 id="player-secret-word">Tree</h2>
