--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -50,7 +50,7 @@
                                 <i class="fa-solid fa-pen changeName-button"></i>
                             </div>
                         </div>
-    
+
                         <div id="changeName-container" class="changeName-container no-display">
                             <input type="text" id="changeName-input" placeholder="Enter a name...">
                             <i onclick="changeOwnName(this, peer.id, document.getElementById('changeName-input').value)"
@@ -73,7 +73,8 @@
                     <span style="font-size: 1.2rem; font-weight: bold;">Rules:</span><br>
                     1. Don't tell anyone your word <br>
                     2. Work out who the Mimic/s are (It might even be you) <br><br>
-                    <span style="color: rgb(2, 233, 2); font-weight: bold;">If you think you are the Civilian:</span><br>
+                    <span style="color: rgb(2, 233, 2); font-weight: bold;">If you think you are the
+                        Civilian:</span><br>
                     1. Work together with who you think the other Civilians are<br>
                     2. Vote off the Mimics<br><br>
                     <span style="color: rgb(255, 38, 0); font-weight: bold;">If you think you are the Mimic:</span><br>
@@ -362,8 +363,12 @@
         function triggerCurrentRound() {
             $('player-secret-word').text(playersInGame[peer.id]["word"]);
 
-            $('#starting-slide').fadeToggle(500);
-            $('#your-word-slide').fadeToggle(500);
+            $('#starting-slide')
+                .fadeOut(500)
+                .promise()
+                .then(function () {
+                    $('#your-word-slide').fadeIn(500);
+            });
         }
     </script>
 
